# dust3d

./: .clang-format  .gitignore  .qmake.stash  .travis.yml  ACKNOWLEDGEMENTS.html  AUTHORS  BUILD  CHANGELOGS  CHANGELOGS.md  CMakeLists.txt  CONTRIBUTORS  LICENSE  MANUAL.md  Makefile  README.md  SUPPORTERS  appveyor.yml  convertresources.sh  dust3d.icns  dust3d.pro  dust3d.pro.flatpak.patch  dust3d.rc  dust3d_jezzasoft.xcf  org.dust3d.dust3d.json  qrc_QtAwesome.cpp  qrc_color_widgets.cpp  resources.qrc  ui_color_dialog.h  ui_color_palette_widget.h
.github/: FUNDING.yml
.github/workflows/: DEPLOYING.yml  appimage.yml  debug.yml  development.yml  release.yml  update-sponsors.yml
application/: SimpleHTTPServer_SharedArrayBuffer.py  application.pro  resources.qrc
application/resources/: cedar_bridge_specular.dds  material-demo-model.ds3  model-banana.ds3  model-cat.ds3  model-dog.ds3  model-giraffe.ds3  model-mosquito.ds3  model-screwdriver.ds3  model-seagull.ds3  preview_model_first.xml  preview_model_fourth.xml  preview_model_second.xml  preview_model_third.xml  preview_quadruped_walk.xml  rig_biped.xml  rig_bird.xml  rig_dragon.xml  rig_fish.xml  rig_fly.xml  rig_generic.xml  rig_human.xml  rig_humanoid.xml  rig_insect.xml  rig_quad.xml  rig_quadruped.xml  rig_snake.xml  rig_spider.xml
application/shaders/: model.frag  model.vert  model_core.frag  model_core.vert  model_wasm.frag  monochrome.frag  monochrome.vert  monochrome_core.frag  monochrome_core.geom  monochrome_core.vert  scene_ground.frag  scene_ground_core.frag  scene_model.frag  scene_model_core.frag  scene_outline.frag  scene_outline.vert  scene_outline_core.frag  scene_outline_core.vert  shadow_map.frag  shadow_map.vert  shadow_map_core.frag  shadow_map_core.vert  world_ground.frag  world_ground.vert  world_ground_core.frag  world_ground_core.vert  world_model.frag  world_model.vert  world_model_core.frag  world_model_core.vert
application/sources/: about_widget.cc  about_widget.h  animation_manage_widget.cc  animation_manage_widget.cpp  animation_manage_widget.h  animation_parameter_table.h  animation_preview_worker.cc  animation_preview_worker.h  bone_generator.cc  bone_generator.h  bone_list_model.cc  bone_list_model.h  bone_manage_widget.cc  bone_manage_widget.h  bone_preview_grid_widget.cc  bone_preview_grid_widget.h  bone_property_widget.cc  bone_property_widget.h  bone_structure.h  ccd_ik_resolver.cc  ccd_ik_resolver.h  component_breadcrumb_widget.cc  component_breadcrumb_widget.h  component_list_model.cc  component_list_model.h  component_preview_grid_widget.cc  component_preview_grid_widget.h  component_preview_images_decorator.cc  component_preview_images_decorator.h  component_property_widget.cc  component_property_widget.h  cut_face_preview.cc  cut_face_preview.h  dds_file.cc  dds_file.h  debug.cc  debug.h  document.cc  document.h  document_bone.cc  (+171 more)
ci/: AppRun-patched-x86_64  collect_oom_report.sh  dust3d.appdata.xml  dust3d.desktop  icon.xcf  lint.sh  org.dust3d.appdata.xml  org.dust3d.desktop  org.dust3d.dust3d.appdata.xml  org.dust3d.dust3d.desktop  test_models.py  upload-github-release-asset.sh
ci/appimage/: bundle.sh  dust3d.appdata.xml  dust3d.desktop
data/: bmesh_test_1.blend  bmesh_test_1.h  bmesh_test_2.blend  bmesh_test_2.h
docs/: builds.rst  conf.py  for_developers.rst  get_started.rst  index.rst  install.rst  next_stage.rst  origin-and-future.rst  origin_and_future.rst  remote_io_protocol.rst  script_reference.rst  shortcuts.rst
docs/examples/: index.rst
docs/interface/: interface.rst  interface.xcf  menubar.rst  parts-list-panel.xcf  parts_panel.rst  script_panel.rst
docs/make_stone/: CMakeLists.txt  README.md  make_stone.c
docs/matplotlib/: chamfer-vertex.py
dust3d/animation/: animation_generator.cc  animation_generator.h  common.h  sound_event_detector.cc  sound_event_detector.h  sound_generator.cc  sound_generator.h
dust3d/base/: axis_aligned_bounding_box.h  axis_aligned_bounding_box_tree.cc  axis_aligned_bounding_box_tree.h  bone_binding.h  color.h  combine_mode.cc  combine_mode.h  cut_face.cc  cut_face.h  debug.h  ds3_file.cc  ds3_file.h  math.h  matrix4x4.h  object.h  part_base.cc  (+23 more)
icons/: README.md
include/: dust3d.h
languages/: dust3d_es_AR.qm  dust3d_es_AR.ts  dust3d_it_IT.qm  dust3d_it_IT.ts  dust3d_zh-CN.ts  dust3d_zh_CN.qm  dust3d_zh_CN.ts
lib/: libdust3d.pro
resources/: cedar_bridge_irradiance.dds  dust3d-square.xcf  dust3d.xcf  material-demo-model.ds3  model-addax.ds3  model-backpacker.ds3  model-bicycle.ds3  model-bob.ds3  model-cat.ds3  model-dog-head.ds3  model-dog.ds3  model-giraffe.ds3  model-meerkat.ds3  model-mosquito.ds3  model-procedural-tree.ds3  model-screwdriver.ds3  model-seagull.ds3  tree.xcf
samples/: spider.dus  stone.dus
shaders/: default.core.frag  default.core.vert  default.frag  default.vert  pbr-joey.frag  pbr-qt.frag  pbr.frag  pbr.vert  scene.frag  scene.vert  shadow.frag  shadow.vert
src/: 3dstruct.h  Info.plist  aboutwidget.cpp  aboutwidget.h  advancesettingwidget.cpp  advancesettingwidget.h  ambientocclusionbaker.cpp  ambientocclusionbaker.h  anglesmooth.cpp  anglesmooth.h  animalposer.cpp  animalposer.h  animalrigger.cpp  animalrigger.h  animationclipgenerator.cpp  animationclipgenerator.h  animationclipplayer.cpp  animationclipplayer.h  animationpanelwidget.cpp  animationpanelwidget.h  array.c  array.h  autorigger.cpp  autorigger.h  autosaver.cpp  autosaver.h  blockmesh.cpp  blockmesh.h  bmesh.c  bmesh.h  bonedocument.cpp  bonedocument.h  boneexportwidget.cpp  boneexportwidget.h  bonemark.cpp  bonemark.h  bonenameconverter.cpp  bonenameconverter.h  booleanmesh.cpp  booleanmesh.h  (+516 more)
tests/: test-add-cube.c  test-add-obj.c  test-add-stone.c  test-chamfer-edge.c  test-inter.c  test-slice-by-face.c
(+220 files in other folders)
